--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -1,7 +1,7 @@
 <!--<link rel="stylesheet" href="sample-contract.component.scss">-->
 <div class="sample-contract row" style="font-family: Roboto">
   <!--  information contract-->
-  <div class="col-md-3 sample-contract__information" style="background-color: white;">
+  <div class="sample-contract__information" style="background-color: white; width: 24.7%">
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
       <div style="padding-bottom: 10px; text-align: center" class="label">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
       <div style="line-height: 25px">
@@ -51,37 +51,26 @@
   </div>
 
   <!--  file content-->
-  <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
+  <div class="sample-contract__file viewer-pdf isDrag"
+       style="background-color: #F2F2F2; position: relative; width: 74.7%">
     <div id="pdf-viewer-step-3">
-      <!--      <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">-->
-      <!--        <div class="resize-drag not-out-drop"-->
-      <!--             [id]="d.id"-->
-      <!--             style="z-index: -1"-->
-      <!--             #itemElement-->
-      <!--             (click)="getSignSelect(d)"-->
-      <!--             [ngClass]="changeColorDrag(null,true)"-->
-      <!--             [ngStyle]="changePosition(d)">-->
-      <!--          <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>-->
-      <!--          <div class="sig-img-daky" (click)="onCancel($event, d)">-->
-      <!--            <img src="assets/img/clear.svg" alt="">-->
-      <!--            <img src="assets/img/border-clear.svg" alt="">-->
-      <!--          </div>-->
-      <!--          <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>-->
-      <!--        </div>-->
-      <!--      </div>-->
+      <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
+        <div class="resize-drag not-out-drop"
+             [id]="d.id"
+             style="z-index: -1"
+             #itemElement
+             (click)="getSignSelect(d)"
+             [ngClass]="changeColorDrag(null,true)"
+             [ngStyle]="changePosition(d)">
+          <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
+          <div class="sig-img-daky" (click)="onCancel($event, d)">
+            <img src="assets/img/clear.svg" alt="">
+            <img src="assets/img/border-clear.svg" alt="">
+          </div>
+          <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
+        </div>
+      </div>
 
     </div>
-  </div>
-</div>
-<div class="footer-sample-contract">
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
-  <div>
-    <button type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Ủy quyền</button>
-    <button type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Chuyển tiếp</button>
-  </div>
-
-  <div>
-    <button type="button" name="next" class="next action-button">Từ chối</button>
-    <button (click)="dieuphoi()" type="button" name="next" class="next action-button">Điều phối</button>
   </div>
 </div>
