--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
@@ -4,20 +4,20 @@
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div> -->
+         <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
       </li>
 
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
                      step == 'confirm-contract') ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div> -->
+         <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người xử lý hợp đồng</div>
       </li>
 
       <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div> -->
+         <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div>
       </li>
 
       <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div> -->
+         <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận thông tin hợp đồng</div>
       </li>
     </ul>
   </div>
