--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
@@ -1,30 +1,30 @@
 <!-- form step 1 -->
 <div>
-  <div class="row">
-    <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type" checked> Hợp đồng đơn lẻ không theo mẫu</label>
-    </div>
-    <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type"> Hợp đồng đơn lẻ theo mẫu</label>
-    </div>
-    <div class="radio col-md-4 label_type">
-      <label><input type="radio" name="type"> Hợp đồng theo lô</label>
-    </div>
-  </div>
+<!--  <div class="row">-->
+<!--    <div class="radio col-md-4 label_type">-->
+<!--      <label><input type="radio" name="type" checked> Hợp đồng đơn lẻ không theo mẫu</label>-->
+<!--    </div>-->
+<!--    <div class="radio col-md-4 label_type">-->
+<!--      <label><input type="radio" name="type"> Hợp đồng đơn lẻ theo mẫu</label>-->
+<!--    </div>-->
+<!--    <div class="radio col-md-4 label_type">-->
+<!--      <label><input type="radio" name="type"> Hợp đồng theo lô</label>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
         <div class="label_item">Tên hợp đồng <span class="require_star">*</span></div>
         <div class="input-group">
-          <input type="text" id="contractName" [(ngModel)]="contractName" class="form-control"/>
+          <input type="text" id="contractName" [value]="contractName" class="form-control" disabled/>
         </div>
       </div>
-      <div class="form-group">
-        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractName!=''">
-          {{errorContractName}}
-        </p>
-      </div>
+<!--      <div class="form-group">-->
+<!--        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractName!=''">-->
+<!--          {{errorContractName}}-->
+<!--        </p>-->
+<!--      </div>-->
     </div>
   </div>
 
@@ -52,7 +52,7 @@
       <div class="form-group">
         <div class="label_item">Số hợp đồng</div>
         <div class="input-group">
-          <input type="text" id="contractNumber" [(ngModel)]="contractNumber" class="form-control"/>
+          <input type="text" id="contractNumber" [value]="contractNumber" disabled class="form-control"/>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
         <div class="label_item">Loại hợp đồng</div>
         <div class="col">
           <ng-multiselect-dropdown id="contractType" [(ngModel)]="contractType" [placeholder]="'-- Chọn --'"
-                                   [settings]="dropdownTypeSettings" [data]="contractTypeList">
+                                   [settings]="dropdownTypeSettings" [data]="contractTypeList" [disabled]="true">
             <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
                 <label style="color: #333; font-weight: normal;"
@@ -82,7 +82,7 @@
         <div class="label_item">Hợp đồng liên quan</div>
         <div class="col">
           <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="contractConnect" [placeholder]="'-- Chọn --'"
-                                   [settings]="dropdownConnectSettings" [data]="contractConnectList">
+                                   [settings]="dropdownConnectSettings" [data]="contractConnectList" [disabled]="true">
             <ng-template #optionsTemplate let-item let-option="option"
                          let-id="id" let-isSelected="isSelected">
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -102,7 +102,7 @@
         <div class="select-file-contract">
           <div class="file-approve">
             <div class="label_item">File đính kèm</div>
-            <input id="attachFile" type="file" accept=".pdf, .doc, .docx"
+            <input id="attachFile" type="file" accept=".pdf, .doc, .docx" disabled
                    (change)="fileChangedAttach($event)" style="display: none;" multiple/>
             <div class="select-contract" (click)="addFileAttach()">
               <input type="text" placeholder="Chọn file đính kèm (PDF, DOC, DOCX)" readonly [ngModel]="this.datas.file_name_attach">
@@ -119,7 +119,7 @@
       <div class="form-group">
         <div class="label_item">Lời nhắn</div>
         <div class="input-group">
-          <input type="text" id="comment" [(ngModel)]="comment" class="form-control"/>
+          <input type="text" id="comment" [(ngModel)]="comment" class="form-control" disabled/>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
       <div class="form-group">
         <div class="label_item">Ngày đến hạn ký <span class="require_star">*</span></div>
         <div class="input-line">
-          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker input-text"></ngx-datepicker>
+          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker input-text" [disabled]="true"></ngx-datepicker>
           <img src="assets/img/db_calendar.svg" alt="mobifone.contract" class="input-img">
         </div>
       </div>
