--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -218,6 +218,20 @@ h3{
   background-repeat: no-repeat;
   background-image: url(../../assets/img/db_log_out.svg);
 }
+.db_icon_english {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/icon_english.svg);
+}
+.db_icon_vietnam {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/icon_vietnam.svg);
+}
 
 .form-input-line {
   display: flex;
