--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-md-3">
       <div class="form-group">
-        <button class="btn btn-lg btn-block">Tìm kiếm</button>
+        <button class="btn btn-lg btn-block">{{'search' | translate }}</button>
       </div>
     </div>
   </div>
