create module signatue contract#

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -108,6 +108,7 @@
                         formControlName="signType"
                         [placeholder]="'-- Chọn --'"
                         [settings]="dropdownSignTypeSettings"
+                        [(ngModel)]="demo"
                         [data]="signTypeList">
                         <ng-template
                           #optionsTemplate
