--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -19,6 +19,7 @@
     font-size: 13px;
     font-weight: 500;
     width: 24.36%;
+    text-align: center;
   }
   .btn_footer {
     display: flex;
