--- a/src/app/main/contract-signature/components/index/index.component.html
+++ b/src/app/main/contract-signature/components/index/index.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding-right: 0; overflow: hidden">
+<div class="container-fluid">
   <app-header-contract [datas]="datas"></app-header-contract>
   <app-infor-coordination *ngIf="this.datas.step == 'infor-coordination'" [datas]="this.datas"></app-infor-coordination>
   <app-add-contract *ngIf="this.datas.step == 'confirm-coordination'" #AddContract [datas]="this.datas"></app-add-contract>
