--- a/src/app/main/contract-signature/components/index/index.component.scss
+++ b/src/app/main/contract-signature/components/index/index.component.scss
@@ -1,3 +1,9 @@
+.container-fluid {
+  padding-right: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
 .content {
   //height: 102px;
   display: flex;
