--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <div class="sidebar-content">
     <perfect-scrollbar>
       <div class="sidebar-header">
-        <a href="#">
+        <a href="/main/dashboard">
           <img src="assets/img/logo_eContract_21.svg" alt="Logo" class="img-responsive" width="185px" height="auto" />
         </a>
       </div>
