--- a/src/app/main/contract-signature/components/index/index.component.scss
+++ b/src/app/main/contract-signature/components/index/index.component.scss
@@ -1,7 +1,7 @@
 .container-fluid {
-  padding-right: 0;
-  overflow: hidden;
-  height: 100%;
+  //padding-right: 0;
+  //overflow: hidden;
+  //height: 100%;
 }
 
 .content {
