--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -137,7 +137,8 @@ h3{
 
 //content
 .content{
-  margin-top: 60px;
+  //margin-top: 60px;
+  margin-top: 40px;
 }
 .content_footer{
   text-align: center;
