--- a/src/app/main/contract-signature/components/contract-coordination/add-contract/add-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/add-contract/add-contract.component.html
@@ -1,5 +1,6 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
-<div class="container-fluid">
+<!--<div class="container-fluid">-->
+<div>
   <!--  <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (stepChange)="getStep()"></app-contract-header>-->
   <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="stepLast"></app-contract-header>
   <ng-container>
