--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 col-md-offset-3" style="display: flex">
+<div class="col-md-12 col-md-offset-3" style="display: flex; height: 74px">
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
