--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -62,6 +62,11 @@
   padding: 8px;
   border-radius: 10px;
 }
+
+.label-disable .label {
+  border-radius: 10px 10px 10px 10px;
+}
+
 .require_star{
   color: red;
 }
