--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -14,6 +14,7 @@
   border-top: 1px solid #ddd;
   display: flex;
   align-items: center;
+  height: 46px;
   .content_footer {
     color:#0160AE;
     font-size: 13px;
