--- a/src/app/main/contract-signature/components/index/index.component.html
+++ b/src/app/main/contract-signature/components/index/index.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <app-header-contract [datas]="datas"></app-header-contract>
+<div>
+<!--  <app-header-contract [datas]="datas"></app-header-contract>-->
   <app-infor-coordination *ngIf="this.datas.step == 'infor-coordination'" [datas]="this.datas"></app-infor-coordination>
   <app-add-contract *ngIf="this.datas.step == 'confirm-coordination'" #AddContract [datas]="this.datas"></app-add-contract>
   <app-footer-signature *ngIf="this.datas.step == 'infor-coordination'" [datas]="datas"></app-footer-signature>
