--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
   <!-- step by step -->
-  <p (click)="t()">log thong tin hopwj ddoongf</p>
+<!--  <p (click)="t()">log thong tin hopwj ddoongf</p>-->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
