--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
               <ul>
                 <li *ngFor="let submenu of menu.submenus" [ngClass]="{'active':submenu.active}">
 
-                  <a (click)='clickLinkSub(menu, submenu)'>
+                  <a (click)="clickLinkSub(menu, submenu, 'contract-signature')">
                     <span class="sub_title">{{submenu.title | translate}}</span>
                     <span *ngIf="submenu.badge" class="badge badge-pill" [ngClass]="submenu.badge.class">{{submenu.badge.text}}</span>
                   </a>
